fed auth login 11.3.2

--- a/conf/defaults.ini
+++ b/conf/defaults.ini
@@ -656,7 +656,10 @@ icon = github
 enabled = false
 allow_sign_up = true
 auto_login = false
+client_authentication =
 client_id = some_id
+managed_identity_client_id =
+audience =
 client_secret =
 scopes = user:email,read:org
 auth_url = https://github.com/login/oauth/authorize
