--- a/conf/sample.ini
+++ b/conf/sample.ini
@@ -650,7 +650,10 @@
 ;enabled = false
 ;allow_sign_up = true
 ;auto_login = false
-;client_id = some_id
+;client_authentication =
+;client_id = some_client_id
+;managed_identity_client_id =
+;audience =
 ;client_secret = some_secret
 ;scopes = user:email,read:org
 ;auth_url = https://github.com/login/oauth/authorize
